[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
authors = ["Your Name <you@example.com>"]  # Replace with your name and email
license = "MIT"  # Specify the license if applicable

[tool.poetry.dependencies]
python = ">=3.11"
email-validator = ">=2.2.0"
ffmpeg-python = ">=0.2.0"
flask = ">=3.1.0"
flask-sqlalchemy = ">=3.1.1"
gunicorn = ">=23.0.0"
psycopg2-binary = ">=2.9.10"
yt-dlp = ">=2025.1.26"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
